--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sliding_sheet: ^0.5.2
   syncfusion_flutter_charts: ^20.3.48
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
+  build_runner: ^2.2.1
   
 dev_dependencies:
   flutter_test:
